# unraid-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  mutation.yml  release.yml  schema-probe.yml  security.yml
docs/: coverage-matrix.md
docs/agents/: triage-labels.md
docs/runbooks/: live-write-assets.md
docs/superpowers/plans/: 2026-05-03-test-maturity-uplift.md  2026-06-23-root-coverage-90.md
docs/superpowers/specs/: 2026-05-03-test-maturity-design.md
scripts/: smoke_install.sh
src/unraid_mcp/: __init__.py  __main__.py  config.py  errors.py  logging_config.py  server.py
src/unraid_mcp/clients/: __init__.py  base.py  unraid.py
src/unraid_mcp/models/: __init__.py  array.py  common.py  disks.py  docker.py  logs.py  metrics.py  network.py  notifications.py  oidc.py  plugins.py  rclone.py  settings.py  shares.py  system.py  system_time.py  ups.py  users.py  vars.py  vms.py
src/unraid_mcp/tools/: __init__.py  _helpers.py  array.py  disks.py  docker.py  logs.py  metrics.py  notifications.py  oidc.py  parity.py  plugins.py  rclone.py  shares.py  system.py  ups.py  users.py  vms.py
tests/: conftest.py
tests/contract/: _surface.py  refresh.py  snapshot.graphql  snapshot.sha256  test_classify_coverage.py  test_classify_drift.py  test_root_coverage.py  test_schema_drift.py  test_used_surface.py
tests/e2e/: conftest.py  test_stdio_handshake.py
tests/integration/: _coverage.py  test_live_reads_full.py  test_live_server.py  test_tool_coverage_manifest.py
tests/live_write/: _gates.py  conftest.py  test_docker.py  test_notifications.py  test_parity.py  test_vms.py
tests/property/: conftest.py  test_config_properties.py  test_error_mapping_properties.py  test_model_tolerance_properties.py  test_password_env_var_properties.py
tests/unit/: conftest.py  test_config.py  test_errors.py  test_live_write_gates.py  test_main.py  test_server.py  test_version.py
tests/unit/clients/: conftest.py  test_base.py  test_schema_check.py  test_unraid.py  test_unraid_phase1.py
tests/unit/models/: test_common.py
tests/unit/tools/: __init__.py  conftest.py  test_array_tools.py  test_decorator.py  test_disks_tools.py  test_docker_tools.py  test_helpers.py  test_mode_gating.py  test_notifications_tools.py  test_parity_tools.py  test_phase1_tools.py  test_shares_tools.py  test_system_tools.py  test_users_tools.py  test_vms_tools.py
