[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unraid-mcp"
version = "0.1.0"
description = "Production-grade Python MCP server for the Unraid GraphQL API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "millsymills-com" }]
keywords = ["unraid", "mcp", "model-context-protocol", "nas", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.3.1,<4.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tenacity>=9.1.4",
    # Pulled in transitively via fastmcp -> mcp; floors lifted here to patched
    # versions so pip-audit is clean (PYSEC-2026-175/177/178/179, PYSEC-2026-161).
    "pyjwt>=2.13.0",
    "starlette>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.15",
    "ty>=0.0.40",
    "bandit[toml]>=1.9.4",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "hypothesis>=6.155.1",
    "pytest-httpserver>=1.1.0",
    "graphql-core>=3.2.6",
    "python-dotenv>=1.0.0",
    "mutmut>=3.6.0",
]

[project.scripts]
unraid-mcp = "unraid_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/millsymills-com/unraid-mcp"
Repository = "https://github.com/millsymills-com/unraid-mcp"
Issues = "https://github.com/millsymills-com/unraid-mcp/issues"

# =============================================================================
# Ruff — linting and formatting
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "TID",  # flake8-tidy-imports
]
ignore = [
    "S101",    # assert used — fine in tests
    "S603",    # subprocess call — not relevant for MCP server
    "PLR0913", # too many function arguments — tool functions need many params
    "PLR0915", # too many statements — registration functions register many tools
    "PLR2004", # magic value comparison — acceptable in tests
    "PLC0415", # import not at top level — intentional for lazy loading and circular dep avoidance
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # unused function args (fixtures)
    "PLR2004", # magic values in tests
    "S105",    # hardcoded passwords in test fixture comparisons
    "S106",    # hardcoded passwords in test fixtures
]
# FastMCP introspects type annotations at runtime, so Context/FastMCP must not be behind TYPE_CHECKING
"src/unraid_mcp/tools/**/*.py" = [
    "TC001",   # application imports needed at runtime for FastMCP annotation introspection
    "TC002",   # third-party imports needed at runtime for FastMCP annotation introspection
]
# CLI entry point emits preflight diagnostics to stderr via _emit(); print is the right tool there
"src/unraid_mcp/__main__.py" = [
    "T201",    # print is intentional for CLI user-facing output
]

[tool.ruff.lint.isort]
known-first-party = ["unraid_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# ty — strict type checking
# =============================================================================
[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-import = "ignore"

# =============================================================================
# Pytest — testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: live read tests against a real Unraid server (set UNRAID_API_KEY)",
    "live_write: live mutating tests; requires UNRAID_API_KEY + UNRAID_ALLOW_LIVE_WRITES=1",
    "e2e: end-to-end MCP stdio transport tests (uses mock GraphQL endpoint)",
    "contract: GraphQL schema contract tests",
    "requires_live: schema drift test that needs a live UNRAID_API_KEY (subset of contract)",
    "property: hypothesis-based property tests on pure functions",
    "slow: marks tests that are slow to run",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
    # Default run = unit + property + e2e + non-live contract tests.
    # Live tiers (`integration`, `live_write`, `requires_live`) are
    # opt-in; CI never has the env to run them.
    "-m",
    "not integration and not live_write and not requires_live",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
    # E2E tests spawn ``unraid-mcp`` over FastMCP's ``StdioTransport`` (anyio
    # blocking portal + asyncio loop) and host a local ``pytest_httpserver``
    # (thread + listening socket). Both leak by design: the portal's loop and
    # the http server's socket are GC'd later, in the *next* test's setup
    # window, where Python's unraisablehook surfaces the ``__del__``
    # ResourceWarnings as ``PytestUnraisableExceptionWarning`` and trips
    # ``filterwarnings = error``. The message starts with ``Exception ignored
    # in:`` for every Python-emitted unraisable, so the filter below is
    # narrower than ``ignore::pytest.PytestUnraisableExceptionWarning`` —
    # genuine "code raised in __del__" warnings (different message shape) will
    # still fail the suite. Tracked upstream in #174.
    "ignore:Exception ignored in:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["unraid_mcp"]
branch = true
omit = ["tests/*", "src/unraid_mcp/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# =============================================================================
# Mutmut — mutation testing (opt-in; CI workflow_dispatch only)
# =============================================================================
# Mutates the three behaviour-critical modules and replays the deterministic
# unit suite (no live tiers, no stdio subprocess spawns) against each mutant.
# Target: >=75% killed per module. Suite stability under a long-lived runner
# depends on the autouse guards in tests/unit/clients/conftest.py (the macOS
# system-proxy probe stub and the redaction-filter leak check); without them
# the in-process re-runs segfault. Run locally with ``uv run mutmut run``;
# inspect survivors with ``uv run mutmut results`` / ``uv run mutmut show``.
[tool.mutmut]
# Copy the whole package so mutated modules can still import their siblings,
# but restrict the mutations themselves to the behaviour-critical modules.
source_paths = ["src/unraid_mcp/"]
only_mutate = [
    "src/unraid_mcp/clients/*",
    "src/unraid_mcp/tools/*",
    "src/unraid_mcp/errors.py",
]
pytest_add_cli_args_test_selection = ["tests/unit/"]

# =============================================================================
# Bandit — security scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — fine in production code for invariants

# =============================================================================
# Hatch — build configuration
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/unraid_mcp"]
